--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
       <!-- For Maven Tomcat Plugin -->
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
@@ -147,6 +154,8 @@
 
         </executions>
       </plugin>
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -168,6 +177,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 </project>
