--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <artifactId>hibernate-core</artifactId>
       <version>4.3.5.Final</version>
     </dependency>
+    <!-- POI -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.9</version>
+    </dependency>
     <!-- Apache Database Connection Pool -->
     <dependency>
       <groupId>org.apache.commons</groupId>
